examples/errors/14_missing_required_field/layout.tml
#use <definitions.tmd>

<Window width={Size x: 1920}/>